--- a/mysite_uwsgi.ini
+++ b/mysite_uwsgi.ini
@@ -3,11 +3,11 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /home/liligong/BTC-price-differences/blkchainsite
+chdir           = /home/liligong/blkchain
 # Django's wsgi file
-module          = project.wsgi
+module          = blkchainsite.wsgi:application
 # the virtualenv (full path)
-home            = /home/liligong/BTC-price-differences/blkchainsite/
+home            = /home/liligong/blkchain/
 
 # process-related settings
 # master
@@ -15,7 +15,7 @@ master          = true
 # maximum number of worker processes
 processes       = 10
 # the socket (use the full path to be safe
-socket          = /home/liligong/BTC-price-differences/blkchainsite/mysite.sock
+socket          = /home/liligong/blkchain/mysite.sock
 # ... with appropriate permissions - may be needed
 # chmod-socket    = 664
 # clear environment on exit
