--- a/mysite_uwsgi.ini
+++ b/mysite_uwsgi.ini
@@ -1,3 +1,4 @@
+
 # mysite_uwsgi.ini file
 [uwsgi]
 
@@ -13,10 +14,10 @@ home            = /home/liligong/blkchain/
 # master
 master          = true
 # maximum number of worker processes
-processes       = 10
+processes       = 10		
 # the socket (use the full path to be safe
 socket          = /home/liligong/blkchain/mysite.sock
 # ... with appropriate permissions - may be needed
-# chmod-socket    = 664
+chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
